fix logo styling for collapsed menu

--- a/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_menu.sass
+++ b/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_menu.sass
@@ -10,9 +10,11 @@
       left: $mainMenuCollapsedWidth
     & ~ .cnt .header
       padding-left: $mainMenuCollapsedWidth
-    .logo
+    .logo-img
       background-image: url('/images/logo-small.svg')
       background-size: auto
+    .logo-version
+        display: none
     .bar
       .__items
         .list-item,
